# lending-club

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
converted_notebooks/: data-cleaning-01.html  feature-classification-01.html
notebook_tools/: __init__.py  data_cleaning.py  database.py  derived_features.py  feature_exploration.py  plots.py
notebooks/: 1-database-creation.ipynb  1-initial-data-cleaning.ipynb  analysis-01.ipynb  analysis-02.ipynb  correlations-01.ipynb  data-cleaning-01.ipynb  data-cleaning-02.ipynb  data-cleaning-03.ipynb  feature-classification-01.ipynb  feature-summary-01.ipynb
pages/: index.md
search/: search_index.json
