[tool.poetry]
name = "tools"
version = "0.1.0"
description = ""
authors = ["Mark Butler"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.0.3"
numpy = "^1.24.4"
pandas = {extras = ["performance"], version = "^2.0.3"}
scikit-learn = "^1.3.0"
sqlalchemy = "^2.0.19"
matplotlib = "^3.7.2"
plotly = "^5.15.0"
seaborn = "^0.12.2"


[tool.poetry.group.dev.dependencies]
jupyterlab-vim = "^0.17.0"
jupyterlab-code-formatter = "^2.2.1"
black = "^23.7.0"
ruff = "^0.0.282"
pylint = "^2.17.5"
nbqa = "^1.7.0"
pre-commit = "^3.3.3"
nbstripout = "^0.6.1"
mlflow = "^2.5.0"
pydocstyle = {extras = ["toml"], version = "^6.3.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
